# forsenwiki

./: .dockerignore  .env.development.example  .env.example  .env.production.example  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  Caddyfile  Dockerfile  Dockerfile-caddy  HOW_TO_MAKE_RELEASE.md  POSTGRES_MIGRATION.md  README.md  buildWorker.js  buildWorkers.js  changelogsToHTML.js  docker-compose.yaml  eslint.config.js  generateLicenses.js  global.d.ts  jsconfig.json  modulePathPlugin.js  package-lock.json  package.json  postcss.config.cjs  prisma.config.ts  start.sh  static.js  svelte.config.js  tailwind.config.cjs  types.js  vite.config.js  workerPlugin.js
json-diff-rs/: Cargo.toml  index.js  package-lock.json  package.json  vite.config.js
json-diff-rs/src/: lib.rs
json-diff-rs/tests/: index.test.js
prisma/: schema.prisma
prisma/migrations/20240503220031_add_yjs_stuff/: migration.sql
prisma/seed/: types.js
scripts/: migrate_local_usercontent.md  migrate_local_usercontent.sh
src/: app.css  app.d.ts  app.html  app.pcss  auth.js  hooks.server.js  types.js
src/lib/: cloudflare.server.js  goatcounter.server.js  lexical.js  lexical.mjs  lexicalCustom.js  lexicalHTML.js  lexicalHTML.server.js  localStore.svelte.ts  prisma.js  prisma.server.js
src/routes/: +error.svelte  +layout.server.js  +layout.svelte  +page.server.js  +page.svelte  Footer.svelte  Header.svelte
src/style/: wiki.css  wiki.pcss
static/: THIRD-PARTY-LICENSES.txt
worker/: getDiffJSON.js  initialUpdate.js  toHTML.js  youtubeClipURL.js
(+341 files in other folders)
