[package]
name = "json-diff-rs"
version = "0.1.0"
license = "ISC"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.149"
serde_json_diff = "0.2.0"

[dependencies.neon]
version = "1.1"
features = ["napi-6"]